# eclipse-capture-csv-python

./: FILE_FORMAT.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/eclipse_capture/: __main__.py  eclipse_capture.py
src/hbcapture/: __main__.py  capture.py  data.py  file.py  writer.py
tests/: conftest.py  test_datapoint.py  test_parse.py
tests/data/: capture.csv  capture_bad_header.csv  test_capture1.csv
